crates/assay-types/tests/snapshots/schema_snapshots__provider-kind-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "AI provider selection.",
  "oneOf": [
    {
      "const": "anthropic",
      "description": "Anthropic (Claude).",
      "type": "string"
    },
    {
      "const": "open_ai",
      "description": "OpenAI (GPT).",
      "type": "string"
    },
    {
      "const": "ollama",
      "description": "Ollama (local models).",
      "type": "string"
    }
  ],
  "title": "ProviderKind"
}
