crates/assay-types/tests/snapshots/schema_snapshots__require-status-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Status of a single spec slug listed in [`SpecPreconditions::requires`].",
  "properties": {
    "passed": {
      "description": "Whether the last recorded run for this slug passed.",
      "type": "boolean"
    },
    "spec_slug": {
      "description": "The gate spec slug that was checked.",
      "type": "string"
    }
  },
  "required": [
    "spec_slug",
    "passed"
  ],
  "title": "RequireStatus",
  "type": "object"
}
