crates/assay-types/tests/snapshots/schema_snapshots__review-check-kind-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "The kind of review check: structural (machine-checkable) or\nagent quality (LLM-evaluated).",
  "oneOf": [
    {
      "const": "structural",
      "description": "Machine-checkable structural completeness check.",
      "type": "string"
    },
    {
      "const": "agent_quality",
      "description": "LLM-evaluated quality assessment (via evaluator subprocess).",
      "type": "string"
    }
  ],
  "title": "ReviewCheckKind"
}
