crates/assay-types/tests/snapshots/schema_snapshots__review-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "A review of completed work against a spec.",
  "properties": {
    "approved": {
      "type": "boolean"
    },
    "comments": {
      "items": {
        "type": "string"
      },
      "type": "array"
    },
    "spec_name": {
      "type": "string"
    }
  },
  "required": [
    "spec_name",
    "approved"
  ],
  "title": "Review",
  "type": "object"
}
