crates/assay-types/tests/snapshots/schema_snapshots__run-manifest-orchestrate-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "GossipConfig": {
      "additionalProperties": false,
      "description": "Configuration for Gossip coordination mode.\n\nControls the coordinator broadcast interval used when `mode = \"gossip\"`.",
      "properties": {
        "coordinator_interval_secs": {
          "default": 5,
          "description": "Interval in seconds between coordinator gossip rounds. Defaults to 5.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        }
      },
      "type": "object"
    },
    "HookContract": {
      "additionalProperties": false,
      "description": "A lifecycle hook that runs an external command at a specific event.",
      "properties": {
        "command": {
          "description": "Shell command to execute when the event fires.",
          "type": "string"
        },
        "event": {
          "$ref": "#/$defs/HookEvent",
          "description": "The lifecycle event that triggers this hook."
        },
        "timeout_secs": {
          "description": "Maximum seconds to wait for the command to complete.",
          "format": "uint64",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        }
      },
      "required": [
        "event",
        "command"
      ],
      "type": "object"
    },
    "HookEvent": {
      "description": "Lifecycle event that the harness can hook into.\n\nHooks fire at specific points during agent execution:\n- `PreTool`: before a tool invocation\n- `PostTool`: after a tool invocation completes\n- `Stop`: when the agent session is stopping",
      "oneOf": [
        {
          "const": "pre-tool",
          "description": "Fires before a tool invocation.",
          "type": "string"
        },
        {
          "const": "post-tool",
          "description": "Fires after a tool invocation completes.",
          "type": "string"
        },
        {
          "const": "stop",
          "description": "Fires when the agent session is stopping.",
          "type": "string"
        }
      ]
    },
    "ManifestSession": {
      "additionalProperties": false,
      "description": "A single session entry within a run manifest.\n\nReferences a spec by name and optionally overrides harness configuration.\nThe pipeline merges these overrides with spec defaults and project config\nto produce a complete [`HarnessProfile`](crate::HarnessProfile).",
      "properties": {
        "depends_on": {
          "description": "Sessions that must complete before this one can start.\n\nEach entry is an effective session name (i.e. `name` if set, otherwise `spec`)\nof another session in the same manifest. Used by the orchestrator to build an\nexecution DAG. Empty means no dependencies — the session can run immediately.",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "file_scope": {
          "description": "Glob patterns defining the file scope for this session.\n\nWhen set, the harness enforces that the agent only modifies files\nmatching these patterns. Empty means no scope restriction.",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "hooks": {
          "description": "Lifecycle hooks for this session. Empty by default.",
          "items": {
            "$ref": "#/$defs/HookContract"
          },
          "type": "array"
        },
        "name": {
          "description": "Optional display name for this session. Defaults to the spec name if omitted.",
          "type": [
            "string",
            "null"
          ]
        },
        "prompt_layers": {
          "description": "Prompt layers injected into this session's prompt assembly. Empty by default.",
          "items": {
            "$ref": "#/$defs/PromptLayer"
          },
          "type": "array"
        },
        "settings": {
          "anyOf": [
            {
              "$ref": "#/$defs/SettingsOverride"
            },
            {
              "type": "null"
            }
          ],
          "description": "Optional settings overrides applied to this session's harness profile."
        },
        "shared_files": {
          "description": "Glob patterns for files shared with other sessions.\n\nFiles matching these patterns are expected to be touched by multiple\nagents. The harness uses this to detect shared-file conflicts during\nscope enforcement. Empty means no shared files declared.",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "spec": {
          "description": "Name of the spec to run (required). Must match a spec file in the project.",
          "type": "string"
        }
      },
      "required": [
        "spec"
      ],
      "type": "object"
    },
    "MeshConfig": {
      "additionalProperties": false,
      "description": "Configuration for Mesh coordination mode.\n\nControls the heartbeat and timeout thresholds used when `mode = \"mesh\"`.",
      "properties": {
        "dead_timeout_secs": {
          "default": 30,
          "description": "Seconds without a heartbeat before a peer is considered dead. Defaults to 30.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        },
        "heartbeat_interval_secs": {
          "default": 5,
          "description": "Interval in seconds between heartbeat pings. Defaults to 5.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        },
        "suspect_timeout_secs": {
          "default": 10,
          "description": "Seconds without a heartbeat before a peer is considered suspect. Defaults to 10.",
          "format": "uint64",
          "minimum": 0,
          "type": "integer"
        }
      },
      "type": "object"
    },
    "OrchestratorMode": {
      "description": "Coordination mode for multi-session orchestrated runs.\n\nSelects the execution topology: the default DAG mode uses explicit\n`depends_on` edges; Mesh uses heartbeat-based peer coordination;\nGossip uses periodic coordinator broadcast.",
      "oneOf": [
        {
          "const": "dag",
          "description": "Directed-acyclic-graph execution using explicit `depends_on` edges.\nThis is the default coordination mode.",
          "type": "string"
        },
        {
          "const": "mesh",
          "description": "Heartbeat-based peer mesh coordination.",
          "type": "string"
        },
        {
          "const": "gossip",
          "description": "Periodic gossip-based coordinator broadcast.",
          "type": "string"
        }
      ]
    },
    "PromptLayer": {
      "additionalProperties": false,
      "description": "A single prompt layer contributing to the assembled agent prompt.\n\nPrompt layers are assembled in priority order (lowest `priority` value first)\nto build the final system prompt for an agent session.",
      "properties": {
        "content": {
          "description": "The prompt text content.",
          "type": "string"
        },
        "kind": {
          "$ref": "#/$defs/PromptLayerKind",
          "description": "Category of this prompt layer."
        },
        "name": {
          "description": "Human-readable name for identification and debugging.",
          "type": "string"
        },
        "priority": {
          "description": "Ordering hint for assembly (lower values assemble first).",
          "format": "int32",
          "type": "integer"
        }
      },
      "required": [
        "kind",
        "name",
        "content",
        "priority"
      ],
      "type": "object"
    },
    "PromptLayerKind": {
      "description": "Category of a prompt layer, determining its priority tier in assembly.\n\nVariants are ordered from highest built-in priority to custom:\n- `System`: foundational agent instructions\n- `Project`: project-level context and conventions\n- `Spec`: spec-specific acceptance criteria and constraints\n- `Custom`: user-defined layers injected at arbitrary priority",
      "oneOf": [
        {
          "const": "system",
          "description": "Foundational agent instructions (highest built-in priority).",
          "type": "string"
        },
        {
          "const": "project",
          "description": "Project-level context and conventions.",
          "type": "string"
        },
        {
          "const": "spec",
          "description": "Spec-specific acceptance criteria and constraints.",
          "type": "string"
        },
        {
          "const": "custom",
          "description": "User-defined layer injected at arbitrary priority.",
          "type": "string"
        }
      ]
    },
    "SettingsOverride": {
      "additionalProperties": false,
      "description": "Settings overrides applied to an agent session.\n\nAll fields are optional or default-empty — only specified values override\nthe base configuration.",
      "properties": {
        "max_turns": {
          "description": "Maximum number of agent turns before forced stop.",
          "format": "uint32",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        },
        "model": {
          "description": "Model identifier to use (e.g., `\"sonnet\"`, `\"opus\"`).",
          "type": [
            "string",
            "null"
          ]
        },
        "permissions": {
          "description": "Permissions granted to the agent (e.g., `\"filesystem\"`, `\"network\"`).",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "tools": {
          "description": "Tools available to the agent (e.g., `\"bash\"`, `\"browser\"`).",
          "items": {
            "type": "string"
          },
          "type": "array"
        }
      },
      "type": "object"
    },
    "StateBackendConfig": {
      "description": "Backend configuration for state persistence.\n\nSerializes with `snake_case` tag keys: `LocalFs` → `\"local_fs\"`,\n`Custom` → `{\"custom\": {...}}`.",
      "oneOf": [
        {
          "const": "local_fs",
          "description": "Local filesystem backend (default). No additional config needed.",
          "type": "string"
        },
        {
          "additionalProperties": false,
          "description": "Linear backend for syncing state to Linear projects.",
          "properties": {
            "linear": {
              "properties": {
                "project_id": {
                  "description": "Optional Linear project to scope state within.",
                  "type": [
                    "string",
                    "null"
                  ]
                },
                "team_id": {
                  "description": "Linear team identifier.",
                  "type": "string"
                }
              },
              "required": [
                "team_id"
              ],
              "type": "object"
            }
          },
          "required": [
            "linear"
          ],
          "type": "object"
        },
        {
          "additionalProperties": false,
          "description": "GitHub backend for syncing state to GitHub issues/projects.",
          "properties": {
            "github": {
              "properties": {
                "label": {
                  "description": "Optional label to scope state issues.",
                  "type": [
                    "string",
                    "null"
                  ]
                },
                "repo": {
                  "description": "GitHub repository in `owner/repo` format.",
                  "type": "string"
                }
              },
              "required": [
                "repo"
              ],
              "type": "object"
            }
          },
          "required": [
            "github"
          ],
          "type": "object"
        },
        {
          "additionalProperties": false,
          "description": "SSH backend for syncing state to a remote host.",
          "properties": {
            "ssh": {
              "properties": {
                "host": {
                  "description": "Remote host to connect to.",
                  "type": "string"
                },
                "port": {
                  "description": "SSH port (defaults to 22 if omitted).",
                  "format": "uint16",
                  "maximum": 65535,
                  "minimum": 0,
                  "type": [
                    "integer",
                    "null"
                  ]
                },
                "remote_assay_dir": {
                  "description": "Path to the assay directory on the remote host.",
                  "type": "string"
                },
                "user": {
                  "description": "SSH user (defaults to current user if omitted).",
                  "type": [
                    "string",
                    "null"
                  ]
                }
              },
              "required": [
                "host",
                "remote_assay_dir"
              ],
              "type": "object"
            }
          },
          "required": [
            "ssh"
          ],
          "type": "object"
        },
        {
          "additionalProperties": false,
          "description": "Custom third-party backend identified by name.",
          "properties": {
            "custom": {
              "properties": {
                "config": {
                  "description": "Backend-specific configuration payload."
                },
                "name": {
                  "description": "Identifier for the backend implementation.",
                  "type": "string"
                }
              },
              "required": [
                "name",
                "config"
              ],
              "type": "object"
            }
          },
          "required": [
            "custom"
          ],
          "type": "object"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Top-level run manifest declaring one or more agent sessions.\n\nDeserialized from TOML where sessions use the `[[sessions]]` array-of-tables\nsyntax. Each session references a spec and optionally overrides harness\nconfiguration.\n\n# Example TOML\n\n```toml\n[[sessions]]\nspec = \"auth-flow\"\n\n[[sessions]]\nspec = \"checkout\"\nname = \"checkout-with-hooks\"\n```",
  "properties": {
    "gossip_config": {
      "anyOf": [
        {
          "$ref": "#/$defs/GossipConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "Gossip mode configuration. Ignored unless `mode = \"gossip\"`."
    },
    "mesh_config": {
      "anyOf": [
        {
          "$ref": "#/$defs/MeshConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "Mesh mode configuration. Ignored unless `mode = \"mesh\"`."
    },
    "mode": {
      "$ref": "#/$defs/OrchestratorMode",
      "default": "dag",
      "description": "Coordination mode for this run. Defaults to `dag` (existing behavior)."
    },
    "sessions": {
      "description": "Ordered list of sessions to execute.\n\nMaps to `[[sessions]]` in TOML. At least one session is expected,\nbut emptiness is a validation concern, not a deserialization concern.",
      "items": {
        "$ref": "#/$defs/ManifestSession"
      },
      "type": "array"
    },
    "state_backend": {
      "anyOf": [
        {
          "$ref": "#/$defs/StateBackendConfig"
        },
        {
          "type": "null"
        }
      ],
      "description": "State persistence backend configuration.\n`None` means the orchestrator uses its default `LocalFsBackend` at\n`OrchestratorConfig` construction time. Set to `LocalFs` explicitly to\ndocument intent; use `Custom` for third-party backends (M011+)."
    }
  },
  "required": [
    "sessions"
  ],
  "title": "RunManifest",
  "type": "object"
}
