crates/assay-types/tests/snapshots/schema_snapshots__run-summary-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Summary of a single active orchestrator run, reported in\n[`AssayServerState`].",
  "properties": {
    "run_id": {
      "description": "Unique run identifier.",
      "type": "string"
    },
    "session_count": {
      "description": "Number of sessions in this run.",
      "format": "uint32",
      "minimum": 0,
      "type": "integer"
    },
    "spec_name": {
      "description": "Spec name being executed.",
      "type": "string"
    },
    "started_at": {
      "description": "When the run started (UTC).",
      "format": "date-time",
      "type": "string"
    }
  },
  "required": [
    "run_id",
    "spec_name",
    "session_count",
    "started_at"
  ],
  "title": "RunSummary",
  "type": "object"
}
