crates/assay-types/tests/snapshots/schema_snapshots__scope-violation-type-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Type of scope violation detected during enforcement.\n\nUsed by the harness to classify file-access violations so agents and\nhumans can distinguish between out-of-scope writes and shared-file\nconflicts in multi-agent sessions.",
  "oneOf": [
    {
      "const": "out-of-scope",
      "description": "File is outside the session's declared `file_scope` globs.",
      "type": "string"
    },
    {
      "const": "shared-file-conflict",
      "description": "File matches a `shared_files` glob claimed by another session.",
      "type": "string"
    }
  ],
  "title": "ScopeViolationType"
}
