crates/assay-types/tests/snapshots/schema_snapshots__session-run-state-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Run state of a single session in the orchestrator.",
  "oneOf": [
    {
      "const": "pending",
      "description": "Session is queued and waiting for dependencies/concurrency slot.",
      "type": "string"
    },
    {
      "const": "running",
      "description": "Session is currently executing.",
      "type": "string"
    },
    {
      "const": "completed",
      "description": "Session completed successfully.",
      "type": "string"
    },
    {
      "const": "failed",
      "description": "Session failed during execution.",
      "type": "string"
    },
    {
      "const": "skipped",
      "description": "Session was skipped (e.g., upstream dependency failed).",
      "type": "string"
    }
  ],
  "title": "SessionRunState"
}
